feat(job-settings): add row limit to jobs
